--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <main>
         <div class="weather">
             <div class="search">
-                <form>
+                <form class="text">
                     <input type="text" value="Aktobe">
+                    <button class="searchBtn"></button>
                 </form>
             </div>
             <div class="tabs">
