fetch request added

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div class="tabs">
                 <div class="tabs_info">
                     <div class="content_1" id="active">
-                        <h1>14&deg;</h1>
+                        <h1 class="thisTemp">14&deg;</h1>
 
                         <div class="cloud"> </div>
 
-                        <div class="city-like"><h2>Aktobe</h2><button class="like"></button></div>
+                        <div class="city-like"><h2 class="thisCity">Aktobe</h2><button class="like"></button></div>
                     </div>
                     <div class="content_2">
                         <p>Aktobe</p>
