--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
             <div class="added-locations">Added Locations:
             </div>
-            <div class="locations"></div>
+            <div class="locations">
+                <div class="cityLike" id="0">Aktobe</div>
+            </div>
         </div>
     </main>
 <script src="Script/script.js"></script>
