--- a/index.html
+++ b/index.html
@@ -49,12 +49,8 @@
             <div class="added-locations">Added Locations:
             </div>
             <div class="locations">
-                <div class="cityLike" id="0">
-                    <h2>Aktobe</h2>
-                    <button class="delete"></button>
-                </div>
                 <div class="cityLike" id="1">
-                    <h2>Moscow</h2>
+                    <h2 class="cityLikeName">Moscow</h2>
                     <button class="delete"></button>
                 </div>
             </div>
