--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                         <div class="city-like"><h2 class="thisCity">Aktobe</h2><button class="like"></button></div>
                     </div>
                     <div class="content_2">
-                        <p>Aktobe</p>
+                        <p class="detailsCity">Aktobe</p>
                         <br>
-                        <p>Temperature: 14 &deg;<br>
+                        <p class="detailsTemp">Temperature: 14 &deg;<br>
                         Feels like: 10 &deg;<br>
                         Weather: Clouds<br>
                         Sunrise: 03:21<br>
