--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         Sunset: 18:54</p>
                     </div>
                     <div class="content_3">
-                        Содержимое 3...
+                        <p class="detailsCity2">Aktobe</p>
                     </div>
                 </div>
                 <div class="inputRadio">
